# Atlas_-M-C_APP-

./: .env.example  .gitignore  COPYRIGHT_HEADERS.txt  LICENSE  NOTICE.md  README.md  README_SIMULATION_PIPELINE.md  START_ATLAS.bat  calc_portfolio.py  debug_data_layer.py  helper_scripts.py  orphans.txt  pyproject.toml  requirements.txt  run_aria.py  run_atlas.py  run_desktop.ps1  run_server.py  scaffold_atlas.py  start_aria.bat  test_aria.py  test_endpoints.py  test_ml.py  test_server_logic.py  tmp_pdf_extract.txt  update_html.py  update_styles.py  verify_analysis.py  verify_output.txt  verify_phase1_refinement.py  verify_phase2.py  verify_phase3.py
.VSCodeCounter/2026-02-27_13-29-25/: details.md  diff-details.md  diff.md  diff.txt  results.json  results.md  results.txt
Project_Governance/: ATLAS_MASTER_PLAN.md  ATLAS_REGISTRO_MAESTRO.md  ATLAS_VISION.md  ATLAS_WORKFLOW.md  DEAD_CODE_REVIEW.md  ROADMAP.md  UI_ISSUES_PLAN.md  claude_updater.md
apps/cli/: terminal.py
apps/desktop/: agents.js  analysis.js  app.js  aria_core.js  decision.js  derivatives.js  finance.js  index.html  indicator_terminal.js  info.js  main.js  mmo.js  package-lock.json  paper_trading.js  playroom.js  playroom_gitcity.js  playroom_racing.js  preload.js  real_estate.js  realestate.js  rl_lab.js  scenario.js  signal_terminal.js  sim_dashboard.js  start_app.bat  strategy.js  styles.css  terminal.js  thought_map.js  trader.js  viz_lab.js  viz_mmo.js  viz_uhq_core.js
apps/server/: server.py  start_server.bat
claude code/extracted_5/: ARIA_100_FINAL_README.md
claude code/extracted_6/: generate_aria_100.py
claude code/extracted_7/: api_keys.py  conversation.py  document.py  elevenlabs_tts.py  notion.py  orchestrator.py  portfolio.py  read_file.py  retrieval.py  tts.py  vector_db.py
configs/: execution.toml  logging.yaml  settings.toml
core/ai_assistant/: agent_context_store.py  agent_registry.py  model_router.py  orchestrator.py  query_router.py  result_validator.py
cpp/: README.md
cpp/src/: bindings.cpp
data/: signal_terminal.db-shm  signal_terminal.db-wal
data/models/: AAPL_ml_rf.pkl  AAPL_ml_xgboost.pkl  MSFT_ml_rf.pkl  MSFT_ml_xgboost.pkl
deliverables/: IMPLEMENTACION.md  finance.js  index.html
docs/: 00_INDEX.md  ALGORITHMS_LIBRARY.md  ANTIGRAVITY_STEP_BY_STEP.md  ARIA_INTELLIGENCE.md  ATLAS_ULTIMATE_BLUEPRINT.md  ESTADO_ACTUAL.md  IDEAS_ABIERTAS.md  IMPLEMENTATION_GUIDE_ADVANCED.md  INFO_SECCION.md  PROJECT_TIMELINE.md  README.md  RL_ENGINE.md  SECCIONES.md  WORKFLOW_FLEXIBLE.md
info_instructions/Repo usage complete/: MMO_System_Map.html  updates to workflow and implementation to the project.txt  updates_to_workflow_flat.txt  updates_to_workflow_normalized.txt
outputs/: desktop_server_loop_report.json  portfolio_package_2026-02-11.json  worktree_sync_report.json
python/: requirements.txt
python/examples/: data_layer_demo.py
python/tests/: __init__.py  conftest.py  test_data_layer.py  test_data_layer_compat.py
scripts/: check_core_paths.py  run_agent_demo.py  run_phase1_demo.py  sync_worktree_modules.py  verify_desktop_server_loop.py
services/windows/: windows_service.py
tests/: conftest.py
tests/agents/: test_context_curator_agent.py  test_docs_agent.py  test_ingestion_agent.py  test_planner_agent.py  test_repo_scout_agent.py  test_reviewer_agent.py  test_test_agent.py
tests/signal_terminal/: test_collectors.py  test_models.py  test_pipeline.py
tests/unit/: test_artifact_schema.py  test_core_extensions.py  test_eventbus_publish_subscribe.py  test_features.py  test_market_state.py  test_market_state_api.py  test_monte_carlo.py  test_phase1_workflow.py  test_portfolio_api_contract.py  test_simulation_runner_tick.py  test_system_thought_map.py
trash/: ARIA_COMPLETE_ECOSYSTEM_MASTER.md  FASE_1_FULL_CODE.md  FASE_1_MASTER_GUIDE.md  README_TEMP.md  bonampak_inputs_README.md  how_to_activate.md  repo_summaries.json  test_output.txt  test_output_2.txt
trash/unzipped_20/ATLAS_CPP_AND_3D/ATLAS_CPP_AND_3D/cpp_core/: CMakeLists.txt
ui_web/: README.md
(+536 files in other folders)
