[project]
name = "atlas-core"
version = "5.0.0"
description = "Advanced AI Assistant with recursive memory and multi-agent system"
authors = [
    {name = "M&C", email = "dev@example.com"}
]
license = "Proprietary"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "anthropic>=0.40.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
voice-basic = [
    "SpeechRecognition>=3.10.0",
    "gTTS>=2.5.0",
    "pyaudio>=0.2.14",
]

voice-advanced = [
    "openai>=1.0.0",
    "elevenlabs>=0.2.0",
    "pyaudio>=0.2.14",
]

web = [
    "duckduckgo-search>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
]

image = [
    "openai>=1.0.0",
    "Pillow>=10.0.0",
]

memory = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]

code = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]

integrations = [
    "python-telegram-bot>=20.0",
    "discord.py>=2.3.0",
]

all = [
    "aria-assistant[voice-basic,voice-advanced,web,image,memory,code,integrations]"
]

dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["atlas"]
package-dir = {"" = "python/src"}

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
